
Problems:
- Need to reformat data (solved)
- Try to export to hdf5 format (solved)

05/04/17
Moved new_hist.py to main folder

*new_hist.py
- Added a mock strategy

Problems:
- Strategy not working (solved)

07/04/17
*new_hist.py
- Showing plot
- Strategy checked and worked

Problems:
- Add a y = 1 line for plot (solved using grid)
- Need to store data (solved - hdf5)
- Create a strategy class (solved 09/04/17)
- Create a for loop for repetitive data chunk download (Solved)
	- Currently having issues with prices somehow being empty DataFrame
	- A few trials show that there is nothing wrong with data retrieval, but rather appending dataframe doesn't work
	- Solved, check here for solution: http://stackoverflow.com/questions/16597265/appending-to-an-empty-data-frame-in-pandas

Homework (Hoang):
- Read "Master databases for algorithmic trading" by quantstart
- Read chapter 3 of "Python for Algorithmic Trading"

09/04/17
added momentum strategy to replace test random strat.

Problems:
- Need a method to track positions and P&L
- Need experiments with various momentum timeframes.
- Crude fix for local var problem. Leaner code might be possible. 

#TODO: scale up to run multiple strategies
#TODO: multiple currency pairs

10/04/17
Some discussions on financial data:
- Considering AWS or DigitalOcean for data storing
- Already had steaming.py, so don't have to work on it
- Might have to consider practical optimization regarding discrepancies between original price and bid/ask price

Begin working on strategies
Reading assignment (Hoang):
- https://en.wikipedia.org/wiki/Mathematical_finance
- Algorithmic Trading Winning Strategies



=======
add position management: position.py
add placeholder for portfolio.py

Problems:
- Need to check with new API for possible changes, particularly "SHORT" side
#TODO: fill NaN positions (seems not to work - need revised)

16/04/2017
Wrote a self-reflection about the CME challenge, also propose a working mechanism for the summer interns.