@@ -1,0 +1,26 @@
+from event import OrderEvent
+import pandas as pd
+import numpy as np
+
+'''
+Strategy note:
+To do:
+	- How to take different ticks
+	- How ADF tests 
+
+
+
+'''
+
+class meanrevertstrat(object):
+	def __init__():
+		self.instrument = instrument
+        self.units = units
+        self.events = events
+        self.ticks = 0
+        self.data = pd.DataFrame()
+
+	def calculate():
+		pass
+
+	def ADFtest():
